# dylen-engine

./: .GEMINI  .dockerignore  .env.example  .gitignore  .semgrep.yml  .snyk  AGENTS.md  BASELINE_VERIFICATION.md  CHANGELOG_ENV_REFACTOR.md  CI_CD_SETUP.md  CODE_QUALITY_REPORT.md  Dockerfile  ENV_AUDIT_COMPLETE.md  ENV_AUDIT_REPORT.md  INFRA.md  LICENSE  Makefile  OUTCOMES_PROMPT_IMPROVEMENTS.md  README.md  REPORT.md  SECURITY.md  abc.py  ai_folder_explanation.md  all_models.json  app.js  architecture-refactor.md  check_version.py  cloudbuild-prod.promote.yml  cloudbuild-stage.migrate.yml  compose.debug.yaml  compose.yaml  debug_db.py  debug_schema.py  dgs-partial-lesson-specs.md  dgs-specs.md  dle-blueprints_styles.md  dle-dgs-integration-specs.md  dle-dgs-integration-specs.md.md  docker-compose.debug.yml  docker-compose.pycharm.yml  (+12 more)
.certs/: origin.crt  origin.key
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/workflows/: ci-cd.yml  deploy-stage.yml  post-merge-migration.yml  pr-migration-check.yml  promote-prod.yml
.zap/: rules.tsv
alembic/: env.py  script.py.mako
alembic/versions/: 02d553f1f3c0_rename_subsection_columns_to_index_and_.py  0b7d3f4f725b_initial_schema_baseline.py  0d8b6c2b9a2a_add_in_app_notifications.py  14628b147ec5_remove_lesson_json.py  182e88aeaf64_super_admin_only_jobs_and_data_transfer.py  1b4e6f7a9c21_add_illustration_tables.py  271313020e9b_drop_widget_status_columns_followup.py  3055a1cfd37e_add_job_hierarchy_and_kind_fields.py  3055a1cfd37e_baseline.py  30bf37f6dee4_add_onboarding_fields.py  33e34e48df92_drop_widget_status_add_widget_type_enum.py  3a2bfc86881f_auto_migration_20260129_211032.py  3a941f60baac_baseline.py  3b3bfc86881f_add_user_id_security_fix.py  3c0d47535e71_update_runtime_config_after_env_refactor.py  5e2d7f94ab31_add_user_language_columns.py  5fca8c2e0924_add_subjective_input_widgets.py  69qeq3n651oz_add_learning_focus_and_section_count.py  6d4a7c1f2e9b_convert_ids_and_add_section_errors.py  6f6e9c1c0c0a_runtime_config_feature_flags.py  7c3d9e2a1f44_add_user_feature_flag_overrides.py  8a2554691669_seed_global_ai_runtime_config_defaults.py  8c17f9a4e2d1_add_web_push_subscriptions.py  8f2f7f3a9c11_add_is_tenant_tier_to_subscription_.py  939e5e69b348_initial_schema_baseline.py  93e25e6216fa_markdown_widget.py  9b1f2d4c7e31_add_section_shorthand_and_error_locations.py  9c9c9c9c9c9c_add_concurrency_limits.py  9ca2ccec4b98_add_coach_tutor_mode_feature_flags.py  a73c0f9a24a9_add_feature_flag_permissions.py  b94c8e7d2f1a_add_sections_table.py  (+17 more)
app/: config.py  main.py
dgs-backend/: debug_validation.py  debug_vertex.py  entrypoint.py  inspect_job.py  inspect_users_table.py  lambda_handler.py  reproduce_crash.py  temp_gatherer_output.md  verify_config.py  verify_fixes.py  verify_headers.py
docs/: AGENTS.md  API_ACCESS.md  AUTH_LOGGING_FLOW.md  DB_SQLALCHEMY_ALEMBIC_ORM_MIGRATION.md  Dylen Backend RBAC Spec.md  ENV_VARIABLES_REFERENCE.md  FRONTEND_OUTCOMES_UPDATE.md  Fenster Widget Backend Spec.md  MIGRATION_ANALYSIS.md  MIGRATION_GUIDE.md  NOTIFICATIONS_SPEC.md  PLANNER_PROMPT_IMPROVEMENTS.md  REPORT.md  RESEARCH_BACKEND_SPECS.md  RESEARCH_FRONTEND_SPECS.md  RUNTIME_CONFIG_ARCHITECTURE.md  Research_Agent_Review_Defects.md  checker-agent-spec.md  cicd_gha_gcp.md  cloud_tasks.md  code-review.md  code_audit_git_status_markdowntext.md  code_quality_refactor_plan.md  code_review_report.md  database_migrations.md  deploy_stage_a_to_z.md  dgs-partial-lesson-specs.md  dgs-specs.md  dle-blueprints_styles.md  env_audit_changes_summary.md  fake-gcs-setup.md  frontend-illustration-widget.md  frontend_signup_implementation.md  frontend_verification_brief.md  gcp-setup-guide.md  github-secrets-reference.md  major-issues.md  markdowntext_widget.md  markdwon_limits  migration_process_and_instructions.md  (+18 more)
fixtures/: dummy_gatherer_response.md  dummy_outcomes_response.md  dummy_outcomes_response_improved.md  dummy_planner_response.md  dummy_repairer_response.md  dummy_section_builder_response.md  dummy_structurer_response.md
infra/: sam-template.yaml  template.yaml
postgres-data/: postgresql.conf  postmaster.pid
samples/: structurer_prompt.md
scripts/: backfill_feature_and_writing_quota_entitlements.py  db_check_drift.py  db_check_heads.py  db_check_linear_history.py  db_check_pr_migration_count.py  db_check_seed_data.py  db_migration_autogen.py  db_migration_guard.py  db_migration_lint.py  db_migration_smoke.py  db_migration_squash.py  db_reset_baseline.py  debug_vertex.py  deploy_stage_now.sh  dotenv_run.py  ensure_superadmin_user.py  entrypoint.py  export_success_graph_sql.py  fix_alembic_version.py  fix_notifications_nullable.sql  gcp_sync_env_to_secrets.py  generate_openapi.py  hydrate_success_graph_sql.py  init-dynamodb.sh  init-postgres.sh  init_db.py  inspect_job.py  inspect_users_table.py  list_models.py  migrate_with_lock.py  migration_order.py  repair_schema.py  reproduce_crash.py  reproduce_widget_bug.py  run_seed_scripts.py  schema_checks.py  test_curl.sh  verify_config.py  verify_db.py  verify_feature_flag_matrix.py  (+6 more)
tests/: conftest.py  test_fix_research_agent.py  test_resources_mock.py  test_tasks.py
tools/: decrypt_section.html
(+575 files in other folders)
