[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dgs-backend"
version = "0.1.0"
description = "Data Generation Service backend for DLE."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "DGS Team" }]
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "openai>=1.40.0,<2.0.0",
    "google-genai>=0.2.0,<2.0.0",
    "myapplication>=0.1.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "uvicorn[standard]>=0.30.0",
    "firebase-admin>=7.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [

    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "bandit>=1.7.0",
    "toml>=0.10.2",
    "semgrep>=1.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "dgs-backend"}
packages = ["app"]
py-modules = ["lambda_handler"]



[tool.ruff]
line-length = 200
indent-width = 2
target-version = "py313"
src = ["dgs-backend"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "N", "UP"]
ignore = ["B905"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
show_error_codes = true
mypy_path = ["dgs-backend"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".vscode", ".idea", "postgres-data"]
skips = ["B101"]  # Skip assert_used check in tests
severity_level = "medium"
