[build-system]
requires = ["setuptools>=68", "wheel"]
build-engine = "setuptools.build_meta"

[project]
name = "dylen-engine"
version = "0.1.0"
description = "Data Generation Engine for Dylen."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Dylen Team" }]
dependencies = [
    "fastapi>=0.128.0,<1.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "google-genai==1.59.0",
    "myapplication>=0.1.0",
    "uvicorn>=0.40.0",
    "firebase-admin>=7.0.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg>=0.30.0",
    "alembic>=1.14.3",
    "python-multipart>=0.0.20",

    "tavily-python>=0.5.0",
    "google-cloud-tasks>=2.18.0",
    "brotli>=1.0.9",
    "msgspec>=0.18.6",
    "pyzipper>=0.3.6",
    "mirascope[google]>=2.2.0",
    "pywebpush>=2.0.3",
]

[project.optional-dependencies]
dev = [

    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "bandit>=1.7.0",
    "toml>=0.10.2",
    "semgrep>=1.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["app"]
py-modules = ["lambda_handler"]



[tool.ruff]
line-length = 255
indent-width = 2
target-version = "py313"
src = ["app"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "N", "UP"]
ignore = ["B905"]

[tool.ruff.lint.per-file-ignores]
"scripts/repair_schema.py" = ["I001"]
"scripts/verify_schema.py" = ["I001"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Security",
    "fastapi.Header",
    "fastapi.Body",
    "fastapi.Path",
    "fastapi.Cookie",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
show_error_codes = true
mypy_path = ["app"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".vscode", ".idea", "postgres-data"]
skips = ["B101"]  # Skip assert_used check in tests
severity_level = "medium"
